--- a/web-ui/src/main/resources/catalog/components/cookieWarning/partials/cookieWarning.html
+++ b/web-ui/src/main/resources/catalog/components/cookieWarning/partials/cookieWarning.html
@@ -4,7 +4,7 @@
   <p class="cookie-warning-header"
      data-translate="">cookieWarning</p>
   <p class="cookie-warning-link ng-cloak" data-ng-if="cookieWarningMoreInfoLink">
-    <a data-ng-href="{{cookieWarningMoreInfoLink}}" target="cookie_law"
+    <a href="https://www.dov.vlaanderen.be/page/privacybeleid" target="cookie_law"
        data-translate="">moreOnCookie</a>
   </p>
   <p class="cookie-warning-actions">
