DOVINSPIRE-3002 cookie warning link aangepast

--- a/web-ui/src/main/resources/catalog/components/cookieWarning/partials/cookieWarning.html
+++ b/web-ui/src/main/resources/catalog/components/cookieWarning/partials/cookieWarning.html
@@ -5,7 +5,7 @@
   <p class="{showCookieWarning}"
      data-translate="">cookieWarning</p>
   <p>
-    <a href="http://sitebeam.net/cookielaw/" target="cookie_law"
+    <a href="https://www.dov.vlaanderen.be/page/privacybeleid" target="cookie_law"
        data-translate="">moreOnCookie</a>
   </p>
   <p>
